exports[`DfuEditor should render stopping 1`] = `
<form
  className="form-horizontal native-key-bindings">
  <div
    className="col-md-12">
    <div
      className="form-group">
      <label
        className="col-md-3 text-right control-label"
        htmlFor={undefined}>
        Zip file
      </label>
      <span
        className="col-md-9 input-group">
        <input
          className="form-control"
          id={undefined}
          onChange={[Function]}
          readOnly={true}
          type={undefined}
          value="/path/to/file" />
        <span
          className="input-group-btn">
          <button
            className="btn btn-default"
            disabled={true}
            onClick={[Function]}
            type="button">
            Choose
          </button>
        </span>
      </span>
    </div>
    <div
      className="form-group">
      <label
        className="col-md-3 text-right control-label"
        htmlFor={undefined}>
        Package info
      </label>
      <span
        className="col-md-9 input-group">
        <pre>
          application:
            bin_file: dfu.bin
            dat_file: dfu.dat
          
        </pre>
      </span>
    </div>
    <div
      className="form-group">
      <label
        className="col-md-3 text-right control-label"
        htmlFor={undefined}>
        Progress
      </label>
      <span
        className="col-md-9 input-group">
        <p>
          Stopping...
        </p>
        <div
          className="progress">
          <div
            aria-valuemax={100}
            aria-valuemin={0}
            aria-valuenow={10}
            className="progress-bar"
            role="progressbar"
            style={
              Object {
                "width": "10%",
              }
            }>
            10%
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    className="btn-toolbar"
    role="toolbar">
    <div
      style={Object {}}>
      <button
        className="btn-nordic pull-right btn btn-primary"
        disabled={true}
        onClick={[Function]}
        type="button">
        <span
          className="icon-stop" />
        Stop DFU
      </button>
    </div>
  </div>
</form>
`;

exports[`DfuEditor should render with default props 1`] = `
<form
  className="form-horizontal native-key-bindings">
  <div
    className="col-md-12">
    <div
      className="form-group">
      <label
        className="col-md-3 text-right control-label"
        htmlFor={undefined}>
        Zip file
      </label>
      <span
        className="col-md-9 input-group">
        <input
          className="form-control"
          id={undefined}
          onChange={[Function]}
          readOnly={true}
          type={undefined}
          value={undefined} />
        <span
          className="input-group-btn">
          <button
            className="btn btn-default"
            disabled={false}
            onClick={[Function]}
            type="button">
            Choose
          </button>
        </span>
      </span>
    </div>
  </div>
  <div
    className="btn-toolbar"
    role="toolbar">
    <div
      style={
        Object {
          "display": "none",
        }
      }>
      <button
        className="btn-nordic pull-right btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button">
        <span
          className="icon-play" />
        Start DFU
      </button>
    </div>
  </div>
</form>
`;

exports[`DfuEditor should render with dfu completed 1`] = `
<form
  className="form-horizontal native-key-bindings">
  <div
    className="col-md-12">
    <div
      className="form-group">
      <label
        className="col-md-3 text-right control-label"
        htmlFor={undefined}>
        Zip file
      </label>
      <span
        className="col-md-9 input-group">
        <input
          className="form-control"
          id={undefined}
          onChange={[Function]}
          readOnly={true}
          type={undefined}
          value="/path/to/file" />
        <span
          className="input-group-btn">
          <button
            className="btn btn-default"
            disabled={true}
            onClick={[Function]}
            type="button">
            Choose
          </button>
        </span>
      </span>
    </div>
    <div
      className="form-group">
      <label
        className="col-md-3 text-right control-label"
        htmlFor={undefined}>
        Package info
      </label>
      <span
        className="col-md-9 input-group">
        <pre>
          application:
            bin_file: dfu.bin
            dat_file: dfu.dat
          
        </pre>
      </span>
    </div>
    <div
      className="form-group">
      <label
        className="col-md-3 text-right control-label"
        htmlFor={undefined}>
        Progress
      </label>
      <span
        className="col-md-9 input-group">
        <p>
          Completed
        </p>
        <div
          className="progress">
          <div
            aria-valuemax={100}
            aria-valuemin={0}
            aria-valuenow={100}
            className="progress-bar"
            role="progressbar"
            style={
              Object {
                "width": "100%",
              }
            }>
            100%
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    className="btn-toolbar"
    role="toolbar">
    <div
      style={
        Object {
          "display": "none",
        }
      }>
      <button
        className="btn-nordic pull-right btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button">
        <span
          className="icon-play" />
        Start DFU
      </button>
    </div>
  </div>
</form>
`;

exports[`DfuEditor should render with file path 1`] = `
<form
  className="form-horizontal native-key-bindings">
  <div
    className="col-md-12">
    <div
      className="form-group">
      <label
        className="col-md-3 text-right control-label"
        htmlFor={undefined}>
        Zip file
      </label>
      <span
        className="col-md-9 input-group">
        <input
          className="form-control"
          id={undefined}
          onChange={[Function]}
          readOnly={true}
          type={undefined}
          value="/path/to/file" />
        <span
          className="input-group-btn">
          <button
            className="btn btn-default"
            disabled={false}
            onClick={[Function]}
            type="button">
            Choose
          </button>
        </span>
      </span>
    </div>
  </div>
  <div
    className="btn-toolbar"
    role="toolbar">
    <div
      style={Object {}}>
      <button
        className="btn-nordic pull-right btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button">
        <span
          className="icon-play" />
        Start DFU
      </button>
    </div>
  </div>
</form>
`;

exports[`DfuEditor should render with file path and package info 1`] = `
<form
  className="form-horizontal native-key-bindings">
  <div
    className="col-md-12">
    <div
      className="form-group">
      <label
        className="col-md-3 text-right control-label"
        htmlFor={undefined}>
        Zip file
      </label>
      <span
        className="col-md-9 input-group">
        <input
          className="form-control"
          id={undefined}
          onChange={[Function]}
          readOnly={true}
          type={undefined}
          value="/path/to/file" />
        <span
          className="input-group-btn">
          <button
            className="btn btn-default"
            disabled={false}
            onClick={[Function]}
            type="button">
            Choose
          </button>
        </span>
      </span>
    </div>
    <div
      className="form-group">
      <label
        className="col-md-3 text-right control-label"
        htmlFor={undefined}>
        Package info
      </label>
      <span
        className="col-md-9 input-group">
        <pre>
          application:
            bin_file: dfu.bin
            dat_file: dfu.dat
          
        </pre>
      </span>
    </div>
  </div>
  <div
    className="btn-toolbar"
    role="toolbar">
    <div
      style={Object {}}>
      <button
        className="btn-nordic pull-right btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button">
        <span
          className="icon-play" />
        Start DFU
      </button>
    </div>
  </div>
</form>
`;

exports[`DfuEditor should render with file path, package info, and dfu in progress 1`] = `
<form
  className="form-horizontal native-key-bindings">
  <div
    className="col-md-12">
    <div
      className="form-group">
      <label
        className="col-md-3 text-right control-label"
        htmlFor={undefined}>
        Zip file
      </label>
      <span
        className="col-md-9 input-group">
        <input
          className="form-control"
          id={undefined}
          onChange={[Function]}
          readOnly={true}
          type={undefined}
          value="/path/to/file" />
        <span
          className="input-group-btn">
          <button
            className="btn btn-default"
            disabled={true}
            onClick={[Function]}
            type="button">
            Choose
          </button>
        </span>
      </span>
    </div>
    <div
      className="form-group">
      <label
        className="col-md-3 text-right control-label"
        htmlFor={undefined}>
        Package info
      </label>
      <span
        className="col-md-9 input-group">
        <pre>
          application:
            bin_file: dfu.bin
            dat_file: dfu.dat
          
        </pre>
      </span>
    </div>
    <div
      className="form-group">
      <label
        className="col-md-3 text-right control-label"
        htmlFor={undefined}>
        Progress
      </label>
      <span
        className="col-md-9 input-group">
        <p>
          In progress...
        </p>
        <div
          className="progress">
          <div
            aria-valuemax={100}
            aria-valuemin={0}
            aria-valuenow={10}
            className="progress-bar"
            role="progressbar"
            style={
              Object {
                "width": "10%",
              }
            }>
            10%
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    className="btn-toolbar"
    role="toolbar">
    <div
      style={Object {}}>
      <button
        className="btn-nordic pull-right btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button">
        <span
          className="icon-stop" />
        Stop DFU
      </button>
    </div>
  </div>
</form>
`;
